Fixed leaderboard name display to preven overflow
Also changed the name to prefer profile username over profile name over user object name

--- a/ai-ethics/src/styles/leaderboard.css
+++ b/ai-ethics/src/styles/leaderboard.css
@@ -45,7 +45,7 @@
 }
 
 .rank-name {
-    height: 40px;
+    height: 60px;
     width: 150px;
     display: flex;
     justify-content: center;
